try to fix password cut off

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -145,14 +145,15 @@
 	justify-content: center;
 	text-align: center;
 }
-.questionnaire-login .input-group,
-.questionnaire-login input {
+.questionnaire-login .input-group input {
 	text-align: center;
 	font-family: 'Northwell';
-	line-height: 85px;
+	line-height: 75px;
+	padding: 1em 0;
+	font-family: 'Northwell';
+	margin-bottom: 0;
 }
-.questionnaire-login .input-group ::placeholder,
-.questionnaire-login input ::placeholder {
+.questionnaire-login .input-group input::placeholder {
 	font-family: 'Northwell';
 	font-size: 2em;
 	color: #fff;
